<resources>
    <string name="app_name">Expiry Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_9_40">9:40</string>
    <string name="c_userssubodhini_aggarwaldownloadsback_png">C:UsersSubodhini AggarwalDownloadsback.png</string>
    <string name="details">Details</string>
    <string name="tropicana_juice">Tropicana Juice</string>
    <string name="item_type">Item Type</string>
    <string name="foodlife_extenders">FoodLife Extenders</string>
    <string name="drink">Drink</string>
    <string name="quantity">Quantity</string>
    <string name="_2pack">2Pack</string>
    <string name="mfg_date">Mfg Date</string>
    <string name="_10_01_2024">10-01-2024</string>
    <string name="expires_on">Expires On</string>
    <string name="_20_02_2024">20-02-2024</string>
    <string name="reduced_price">Reduced Price</string>
    <string name="original_price">Original Price</string>
    <string name="rs_40">Rs. 40</string>
    <string name="rs_35">Rs. 35</string>
    <string name="item_name">Item Name</string>
    <string name="add_this_item">Add this item</string>
    <string name="price">Price</string>
    <string name="exp_date">Exp Date</string>
    <string name="mfg_date_">Mfg Date</string>
    <string name="_Quantity">Quantity</string>
    <string name="_item_type">Item type</string>
    <string name="items">Items</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="track_your_expiry_get_alert_before_spoil">Track your expiry, get alert before spoil</string>
    <string name="expiry_tracker">Expiry Tracker</string>
</resources>