<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_background"
    tools:context=".fragment.DetailsFragment">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:alpha="0.8"
        android:src="@drawable/top_left_elipse_removebg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingHorizontal="12dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="26dp"
            android:layout_height="38dp"
            android:src="@drawable/back_removebg_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/details"
            android:textColorHighlight="#2C2929"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/itemName"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/tropicana_juice"
            android:textColorHighlight="#2C2929"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/roboto"
            android:text="Details"
            android:layout_marginVertical="26dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemName" />

        <androidx.cardview.widget.CardView
            android:id="@+id/itemTypeCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/item_type" />

                <TextView
                    android:id="@+id/itemTypeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/dark_default_background"
                    android:text="@string/drink" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/itemTypeCV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTypeCV">

        <LinearLayout
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="296dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/quantity" />

            <Button
                android:id="@+id/quantityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/dark_default_background"
                android:textStyle="bold"
                android:fontFamily="serif-monospace"
                android:textSize="16sp"
                android:backgroundTint="@color/default_background"
                android:text="@string/_2pack" />
        </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/itemTypeCV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTypeCV1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="296dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:layout_weight="0.5"
                    android:text="@string/mfg_date" />

                <TextView
                    android:id="@+id/mfgDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/dark_default_background"
                    android:text="@string/_10_01_2024" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/itemTypeCV3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTypeCV2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="296dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:text="@string/expires_on" />

                <TextView
                    android:id="@+id/expDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textColor="@color/dark_default_background"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:text="@string/_20_02_2024" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@id/itemTypeCV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTypeCV3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="296dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:text="@string/original_price" />

                <TextView
                    android:id="@+id/priceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/dark_default_background"
                    android:text="@string/rs_40" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTypeCV4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="296dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:text="@string/reduced_price" />

                <TextView
                    android:id="@+id/reducedPriceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/dark_default_background"
                    android:text="@string/rs_35" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>