<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_background"
    tools:context=".fragment.AddItemFragment">

    <ImageView
        android:layout_width="210dp"
        android:layout_height="140dp"
        android:scaleType="fitXY"
        android:src="@drawable/top_left_elipse_removebg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="26dp"
                android:layout_height="38dp"
                android:src="@drawable/back_removebg_preview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/items"
                android:textColorHighlight="#2C2929"
                android:textSize="28sp"
                android:textStyle="bold"

                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.095" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/item_name"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_default_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameTIL1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/_item_type"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemNameTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_default_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameTIL2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/_Quantity"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemNameTIL1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_default_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mfgDateTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/mfg_date_"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.541"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemNameTIL2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterMfg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/dark_default_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expDateTIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/exp_date"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.791"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mfgDateTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/dark_default_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itemNameTIL5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="24dp"
                android:hint="@string/price"
                android:textColorHint="@color/dark_default_background"
                app:boxStrokeColor="@color/dark_default_background"
                app:hintTextColor="@color/dark_default_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expDateTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_default_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addItemButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_default_background"
                android:text="@string/add_this_item"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemNameTIL5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>